--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-redux-firebase": "^3.7.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
